memperbaiki tampilan mobile dan menerapkan fungsi gelap/terang

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                 Yoo's Space
             </div>
             <div class="footer-links">
-                <a href="#section1">About Me</a>
-                <a href="#section2">Project</a>
-                <a href="#section3">Message Us</a>
+                <a href="#section1">Tentang</a>
+                <a href="#section2">Proyek</a>
+                <a href="#section3">Kontak</a>
                 <a href="https://revou.co" target="_blank">RevoU</a>
             </div>
         </div>
