memperbaiki beberapa teks

--- a/profile.html
+++ b/profile.html
@@ -88,8 +88,8 @@
             </div>
             <div class="about-text">
                 <h3>Hai! Aku Aisiya Qutwatunnada <span class="wave">👋</span></h3>
-                <p>Lulusan jurusan Ekonomi yang dulu sering ngerasa salah jurusan 😩 tapi akhirnya nemu passion baru di dunia teknologi, programming, dan desain. Walau awalnya nyasar, sekarang aku lagi serius banget belajar buat jadi AI & Fullstack Developer — bahkan pengen banget kerja di Google, Microsoft, atau OpenAI (aminin, pliss 😭).</p>
-                <p>Aku bukan dari latar belakang teknik, tapi aku percaya usaha dan konsistensi bisa ngalahin jurusan. Saat ini aku lagi belajar Python, JavaScript, backend, dan AI lewat berbagai kursus online kaya Coursera, RevoU, dan Dicoding. Targetku? Ulang kuliah ambil Teknik Informatika dan lanjut S2 di Eropa.</p>
+                <p>Lulusan jurusan Ekonomi yang akhirnya menemukan passion baru di dunia teknologi, programming, dan desain. Walau awalnya nyasar, sekarang aku lagi serius banget belajar buat jadi AI & Fullstack Developer — bahkan pengen banget kerja di Google, Microsoft, atau OpenAI (aminin, pliss 😭).</p>
+                <p>Aku bukan dari latar belakang teknik, tapi aku percaya usaha dan konsistensi itu tidak akan sia-sia. Saat ini aku lagi belajar HTML, CSS, Python, JavaScript, backend, dan Machine Learning lewat berbagai kursus online kaya RevoU,Coursera dan Dicoding. Targetku? Ulang kuliah ambil Teknik Informatika dan lanjut S2 di Eropa.</p>
                 <div class="skill-badges">
                     <span class="skill-badge">HTML5</span>
                     <span class="skill-badge">CSS3</span>
@@ -108,7 +108,7 @@
             <div class="blue-boxes left-box">
                 <h3>Visi Hidupku</h3>
                 <p>"Dari pesantren ke Silicon Valley."</p>
-                <p>Aku pengen buktiin kalau siapa pun bisa sukses di dunia teknologi, asal niat & mau belajar dari nol.</p>
+                <p>Aku pengen buktiin kalau siapa pun bisa sukses di dunia teknologi, asal niat & mau belajar dengan <sungguh-sungguh></sungguh-sungguh>.</p>
             </div>
             
             <div class="avatar-section">
@@ -169,7 +169,7 @@
             <div class="blue-boxes">
                 <h3>2020</h3>
                 <h4>Lulusan Ekonomi</h4>
-                <p>Menyelesaikan kuliah jurusan Ekonomi namun merasa ada yang kurang</p>
+                <p>Menyelesaikan kuliah jurusan Ekonomi</p>
             </div>
             <div class="blue-boxes">
                 <h3>2021</h3>
