menghilangkan fungsi SetupWelcomeMessage() dan memperbaiki teks

--- a/profile.html
+++ b/profile.html
@@ -108,7 +108,7 @@
             <div class="blue-boxes left-box">
                 <h3>Visi Hidupku</h3>
                 <p>"Dari pesantren ke Silicon Valley."</p>
-                <p>Aku pengen buktiin kalau siapa pun bisa sukses di dunia teknologi, asal niat & mau belajar dengan <sungguh-sungguh></sungguh-sungguh>.</p>
+                <p>Aku pengen buktiin kalau siapa pun bisa sukses di dunia teknologi, asal niat & mau belajar dengan sungguh-sungguh.</p>
             </div>
             
             <div class="avatar-section">
