perbarui teks di bagian About Me, Visi & Misi, dan Journey untuk mencerminkan perkembangan dan tujuan baru

--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
             </div>
             <div class="about-text">
                 <h3>Hai! Aku Aisiya Qutwatunnada <span class="wave">👋</span></h3>
-                <p>Lulusan jurusan Ekonomi yang akhirnya menemukan passion baru di dunia teknologi, programming, dan desain. Walau awalnya nyasar, sekarang aku lagi serius banget belajar buat jadi AI & Fullstack Developer — bahkan pengen banget kerja di Google, Microsoft, atau OpenAI (aminin, pliss 😭).</p>
+                <p>Lulusan jurusan Ekonomi yang akhirnya menemukan passion baru di dunia teknologi, programming, dan desain. Walau awalnya nyasar, sekarang aku lagi serius banget belajar buat jadi AI & Fullstack Developer.</p>
                 <p>Aku bukan dari latar belakang teknik, tapi aku percaya usaha dan konsistensi itu tidak akan sia-sia. Saat ini aku lagi belajar HTML, CSS, Python, JavaScript, backend, dan Machine Learning lewat berbagai kursus online kaya RevoU,Coursera dan Dicoding. Targetku? Ulang kuliah ambil Teknik Informatika dan lanjut S2 di Eropa.</p>
                 <div class="skill-badges">
                     <span class="skill-badge">HTML5</span>
@@ -106,24 +106,22 @@
         <h2>Visi & Misi</h2>
         <div class="three-column-layout">
             <div class="blue-boxes left-box">
-                <h3>Visi Hidupku</h3>
-                <p>"Dari pesantren ke Silicon Valley."</p>
-                <p>Aku pengen buktiin kalau siapa pun bisa sukses di dunia teknologi, asal niat & mau belajar dengan sungguh-sungguh.</p>
+                <h3>Visi</h3>
+                <p>Menjadi pribadi yang terus berkembang, berkontribusi di dunia teknologi, dan menginspirasi orang lain untuk tidak takut mencoba hal baru.</p>
             </div>
             
             <div class="avatar-section">
                 <img src="assets/avatar.jpg" alt="Journey" class="avatar">
-                <h3>My Journey</h3>
-                <p><b>From Economics to Tech</b></p>
+                <h3>Perjalanan Singkat</h3>
+                <p>Dari ekonomi ke teknologi, belajar setiap hari, dan siap menghadapi tantangan baru.</p>
             </div>
             
             <div class="blue-boxes right-box">
-                <h3>Misi Hidupku</h3>
-                <ul class="feature-list">
-                    <li><span class="feature-icon">🚀</span> Belajar coding dan AI biar bisa kerja di top tech company</li>
-                    <li><span class="feature-icon">🏫</span> Nabung buat bikin sekolah & panti asuhan teknologi di daerah</li>
-                    <li><span class="feature-icon">💼</span> Buka lapangan kerja buat anak-anak muda berbakat</li>
-                    <li><span class="feature-icon">🇮🇩</span> Bangun Indonesia lewat teknologi dan pendidikan</li>
+                <h3>Misi</h3>
+                <ul>
+                    <li>Terus belajar dan mengasah skill di bidang teknologi.</li>
+                    <li>Berbagi ilmu dan pengalaman dengan orang lain.</li>
+                    <li>Mencapai karir impian di perusahaan teknologi global.</li>
                 </ul>
             </div>
         </div>
@@ -146,9 +144,8 @@
             <div class="blue-boxes">
                 <h3><i class="fas fa-brain"></i> AI & Data</h3>
                 <div class="skill-badges">
-                    <span class="skill-badge">Machine Learning</span>
-                    <span class="skill-badge">Data Analysis</span>
-                    <span class="skill-badge">TensorFlow</span>
+                    <span class="skill-badge">Belajar Dasar AI</span>
+                    <span class="skill-badge">Data Analysis (Pemula)</span>
                 </div>
             </div>
             <div class="blue-boxes">
@@ -167,24 +164,24 @@
         <h2>My Journey</h2>
         <div class="flex-container">
             <div class="blue-boxes">
-                <h3>2020</h3>
-                <h4>Lulusan Ekonomi</h4>
-                <p>Menyelesaikan kuliah jurusan Ekonomi</p>
-            </div>
-            <div class="blue-boxes">
                 <h3>2021</h3>
-                <h4>Menemukan Passion di Teknologi</h4>
-                <p>Mulai belajar coding dan menemukan passion baru di dunia teknologi</p>
+                <h4>Mulai Kuliah Ekonomi</h4>
+                <p>Masuk jurusan Ekonomi sesuai keinginan orang tua, meski dari dulu sudah tertarik dengan dunia teknologi.</p>
             </div>
             <div class="blue-boxes">
                 <h3>2022</h3>
-                <h4>Kursus Online</h4>
-                <p>Mengikuti berbagai kursus online di Coursera, RevoU, dan Dicoding</p>
+                <h4>Belajar Coding & Kursus Online</h4>
+                <p>Mulai belajar coding secara otodidak dan mengikuti kursus online di Coursera, RevoU, dan Dicoding.</p>
             </div>
             <div class="blue-boxes">
-                <h3>Sekarang</h3>
-                <h4>Menuju Impian</h4>
-                <p>Persiapan untuk kuliah Teknik Informatika dan mengejar impian bekerja di perusahaan teknologi top</p>
+                <h3>2025 (September)</h3>
+                <h4>Wisuda Ekonomi</h4>
+                <p>Rencana lulus dan wisuda dari jurusan Ekonomi.</p>
+            </div>
+            <div class="blue-boxes">
+                <h3>Setelah Wisuda</h3>
+                <h4>Kejar Passion di IT</h4>
+                <p>Berniat mengulang S1 di bidang IT untuk benar-benar mendalami passion di dunia teknologi.</p>
             </div>
         </div>
     </section>
